@@ -45,6 +45,10 @@ rank.noTeam: '&4Team not found'
 rank.info: '&6Team position:'
 rank.syntax: '&b%s: &6%s &7(%s)'
 
+# for /team delhome
+delhome.success: '&6Your team home has been deleted' 
+delhome.noHome: '&4Your team has not set a home'
+
 # for /team disband
 disband.success: '&6You have disbanded the team'
 disband.confirm: '&6Type &b/team disband &6again to confirm'
