@@ -33,6 +33,7 @@ Added /teama chatspy to spy on messages sent to team chats
 Added /team title <player/me> <title> to set the title of that team 
 Added /team top to view the leaderboard of teams based on their score
 Added /team rank to view a teams rank 
+Added /team delhome to delete your teams home
 Added /teama title <player> <title> to force a player to have a set title
 Added /teama version to view the plugin version
 Added /teama home <team> to teleport to a teams home
